회원정보 수정에 location id 추가, 유저정보에 이름 넘기기
